<resources>
    <string name="app_name">Tip Time</string>
    <string name="cost_of_service">Cost of Service</string>
    <string name="how_was_the_service">How was the service?</string>
    <string name="amazing_service">Amazing (20%)</string>
    <string name="good_service">Good (15%)</string>
    <string name="ok_service">Okay (10%)</string>
    <string name="custom_service">Your tip</string>
    <string name="round_up_tip">Round up tip?</string>
    <string name="calculate">Calculate</string>
    <string name="tip_amount_start">No tips :(</string>
    <string name="tip_amount">Tip Amount: %s</string>
    <string name="custom_price">Custom</string>
    <string name="store_image">Store image</string>
    <string name="service_image">Service image</string>
    <string name="round_up_image">Round up image</string>
</resources>